test/neg/neg-rpc11.errc
This program is attempting to pass an object with a large static type .over .*? bytes. to upcxx::rpc
